[build-system]
requires = ["uv_build >= 0.8.17, <0.9.0"]
build-backend = "uv_build"

[project]
name = "odu-ref-cc"
version = "0.0.1"
dependencies = [
    "polars",
    "tqdm",
    "httpx",
    "matplotlib",
    "click",
    "geopandas",
    "cartiflette"
]
authors = [
  { name="SCrocky", email="" },
]
description = "A small package to work with Open Data University's climate change challenge"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "GPL-3.0-or-later"

[tool.hatch.version]
source = "uv-dynamic-versioning"

[tool.hatch.dependencies]
dependencies = {file = ["requirements.txt"]}

[project.scripts]
odu-cli = "odu_ref_cc.cli:cli"


[project.urls]
Homepage = "https://github.com/pypa/sampleproject"
Issues = "https://github.com/pypa/sampleproject/issues"
